# energyfuturesexecution

./: .gitignore  README.md  config.py  debug_attach.py  demo output eg.txt  download_settlement_data.py  generate_project_commodities.py  notebook_full_demo.ipynb  requirements.txt  run_full_demo.py
data/: inventory_2020-01-01_2026-03-10.parquet  snapshot_2024-12-31.parquet  strip_CL_2026-03-10.parquet  strip_HO_2026-03-10.parquet  strip_NG_2026-03-10.parquet  strip_RB_2026-03-10.parquet
data/databento_cache/: ZB_2026-02-27_mbp-10_1000-1200.parquet  ZF_2026-02-27_mbp-10_1000-1200.parquet  (+2 more)
module_a_curves/: __init__.py  curve_bootstrapper.py  data_loader.py  interpolation.py  seasonal_model.py
module_b_trading/: __init__.py  alpha_signals.py  carry_rolldown.py  futures_pricer.py  hedge_selector.py  markout_pnl.py  quote_optimizer.py  rfq_generator.py  risk_analytics.py  scenario_engine.py  win_probability.py
module_c_execution/: __init__.py  execution_scheduler.py  market_impact.py  order_simulator.py
shared/: __init__.py  data_cache.py  databento_loader.py  date_utils.py  kdb_interface.py  plot_style.py
shared/cpp_kernel/: CMakeLists.txt  pricing_kernel.cp314-win_amd64.pyd  pyproject.toml  setup.py  setup_debug.py
shared/cpp_kernel/bindings/: pybind_module.cpp
shared/cpp_kernel/commodities_cpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shared/cpp_kernel/include/: curve_engine.h  execution_engine.h  futures_pricer.h
shared/cpp_kernel/pricing_kernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shared/cpp_kernel/tests/: test_cpp_kernel.py
(+5 files in other folders)
